--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,48 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-chirpy
+
+# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
+# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
+# otherwise, the layout language will use the default value of 'en'.
+lang: en
+
+# Change to your timezone › https://zones.arilyn.cc
+timezone: Europe/Amsterdam
+
+# jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
+# ↓ --------------------------
+
+title: Volatco # the main title
+
+tagline: A dual 144-asynchronous multicomputer # it will display as the subtitle
+
+description: >- # used by seo meta and the atom feed
+  A develpmnet board for polyForth that helps to reveal machine intelligence.
+
+# Fill in the protocol & hostname for your site.
+# E.g. 'https://username.github.io', note that it does not end with a '/'.
+url: "https://volatco.github.io"
+pageviews:
+  provider: # now only supports 'goatcounter'
+
+# Prefer color scheme setting.
+#
+# Note: Keep empty will follow the system prefer color by default,
+# and there will be a toggle to switch the theme between dark and light
+# on the bottom left of the sidebar.
+#
+# Available options:
+#
+#     light — Use the light color scheme
+#     dark — Use the dark color scheme
+#
+theme_mode: [dark]
+
+# The CDN endpoint for media resources.
+# Notice that once it is assigned, the CDN url
+# will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
+#
+# e.g. 'https://cdn.com'
+cdn: "https://volatco.tech"
+
+# the avatar on sidebar, support local or CORS resources
+avatar: "/commons/avatar.jpg"
