--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ title: Volatco # the main title
 tagline: A dual 144-asynchronous multicomputer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A develpmnet board for polyForth that helps to reveal machine intelligence.
+  A development board for polyForth that helps to reveal machine intelligence.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
