--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,46 +1,20 @@
 theme: jekyll-theme-midnight
-
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
 lang: en
-
-# Change to your timezone › https://zones.arilyn.cc
 timezone: Europe/Amsterdam
-
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
-
 title: A Powerful Multicomputer # the main title
-
 tagline: The future of multicomputing # it will display as the subtitle
-
 description: >- # used by seo meta and the atom feed
-  An affordable and advanced development board for polyForth where the programmer can understand in great detail those algorithms as machine intelligence, using dual 144-asynchronous multicomputers.
+  An advanced polyForth development board where programming machine intelligence and other autonomous applications leverages the extreme power and lo-power compute of 16M (1-bit precision) SPI and 128M Disk Storage with 144-asynchronous nodes configured in HOST and TARGET chips where much of their I/O are configured as header-pins.
+  
+  * 1.8V 10 ns sleep
+  * wake on 15nJ
+  * compute (non-clocked flop) 7pJ
 
+  Words.
 url: "https://volatco.github.io"
 pageviews:
   provider: # now only supports 'goatcounter'
-
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light — Use the light color scheme
-#     dark — Use the dark color scheme
-#
 theme_mode: dark
-
-# The CDN endpoint for media resources.
-# Notice that once it is assigned, the CDN url
-# will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
-#
-# e.g. 'https://cdn.com'
 cdn: "https://volatco.tech"
-
-# the avatar on sidebar, support local or CORS resources
 avatar: "/images/volatco.jpg"
