--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,6 +2,13 @@ theme: jekyll-theme-midnight
 permalink: pretty
 lang: en
 timezone: Europe/Amsterdam
+defaults:
+  - scope:
+      path: "pages"
+      type: "pages"
+    values:
+      layout: default
+      permalink: /pages/:basename/
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 title: Volatco - Powerful Multicompute # the main title
 tagline: The future of multiprogramming # it will display as the subtitle
